# mdbook-obsidian

./: .gitignore  404.html  CHANGELOG.md  Cargo.toml  README.md  book.toml  index.html  print.html  searchindex.js  searchindex.json
.github/: dependabot.yml
.github/workflows/: build.yml  deploy-gh-pages.yml  release-please.yml  test.yml
assets/templates/: callouts.html
docs/src/: README.md  SUMMARY.md
docs/src/examples/: callouts.md
examples/: callouts.html
src/: callouts.rs  lib.rs  main.rs
