[package]
name = "mdbook-obsidian"
version = "0.1.0"
authors = ["GeckoEidechse"]
edition = "2021"

description = "mdBook preprocessor to render Obsidian specific syntax"
repository = "https://github.com/GeckoEidechse/mdbook-obsidian"
license = "MPL-2.0"
readme = "README.md"
keywords = [ "mdbook", "preprocessor", "markdown", "obsidian" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
