[package]
name = "mdbook-obsidian"
version = "0.1.0"
authors = ["GeckoEidechse"]
edition = "2021"

description = "mdBook preprocessor to render Obsidian specific syntax"
repository = "https://github.com/GeckoEidechse/mdbook-obsidian"
license = "MPL-2.0"
readme = "README.md"
keywords = [ "mdbook", "preprocessor", "markdown", "obsidian" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
mdbook = "0.4.37"
once_cell = "1.19.0"
regex = "1.10.3"
rust-embed = "8.2.0"
semver = "1.0.21"
serde_json = "1.0.113"
